feat: 提交文档，gateway的服务已降级增加国际化配置